--- a/index.html
+++ b/index.html
@@ -19,5 +19,46 @@
             </ul>
         </nav>
     </header>
+
+    <main class="main-bg">
+       
+        <!-- Hero -->
+        <section id="hero">
+            <div class="hero-info">
+                <h1>Desarrollador en progreso</h1>
+                <p><b>Santiago Miedema</b> ,futuro desarrollador web</p>
+                <div class="buttoms">
+                    <a class="buttom-contactame" href="#">Contactame</a>
+                    <a class="buttom-sabermas" href="#">Saber más</a>
+                </div>
+            </div>
+            <div class="hero-img">
+                <img src="./img/img-web.jpg" alt="Imagen de desarrollo">
+            </div>
+            <a href="#">
+                <img class="wpp" src="./img/wpp.png" alt="logo de whatsapp" target="_blank">
+            </a>
+        </section>
+
+        <!-- info -->
+
+        <section id="mi-info">
+            <h2>Sobre mí</h2>
+            <p>
+                ¡Hola! ,mi nombre es Santiago .Tengo 25 años y estoy estudiando desarrollo web .Siempre me intereso
+                 mucho el mundo de la tecnología en general .Aprendí muchas cosas solo por curiosidad en cuanto a bases de html
+                , css , y reparaciones de pc .Me encantaría ir escalando en conocimientos de desarrollo y poder llegar a participar
+                en un proyecto de videojuegos .Se que es una rama distinta pero NUCBA me parece un gran comienzo para entender 
+                fundamentos clave
+            </p>
+        </section>
+        <section>
+            <br>
+            <br>
+            <br>
+        </section>
+    </main>
+
+
 </body>
 </html>
