--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
         <img src="img/logosm.png" alt="logo de SM" class="logo">
         <nav class="navbar">
@@ -21,7 +22,7 @@
     </header>
 
     <main class="main-bg">
-       
+
         <!-- Hero -->
         <section id="hero">
             <div class="hero-info">
@@ -32,14 +33,15 @@
                     <a class="buttom-sabermas" href="#">Saber más</a>
                 </div>
             </div>
-            <div class="hero-img">
-                <img src="./img/img-web.jpg" alt="Imagen de desarrollo">
+            <div class="img-container">
+                <img class="hero-img" src="./img/img-web.jpg" alt="Imagen de desarrollo">
             </div>
             <a href="#">
                 <img class="wpp" src="./img/wpp.png" alt="logo de whatsapp" target="_blank">
             </a>
         </section>
 
+        <div class="linea"></div>
         <!-- info -->
 
         <section id="mi-info">
@@ -52,13 +54,104 @@
                 fundamentos clave
             </p>
         </section>
-        <section>
-            <br>
-            <br>
-            <br>
+
+        <div class="linea"></div>
+        <!-- Ventajas! -->
+
+        <section class="ventajas">
+            <h2>¡Ventajas al contratarme!</h2>
+            <p>Veamos a continuación el porque deberia contratarme</p>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/lupa.png" alt="icono de lupa">
+                    <h3>Aprendizaje</h3>
+                    <p>Probablemente surjan dudas o inconvenientes que seran resueltos , ya que la curiosidad aca es una virtud</p>
+                </div>
+
+                <div class="card">
+                    <img src="./img/heart.png" alt="icono de corazon">
+                    <h3>Dedicación</h3>
+                    <p>Me encantaria trabajar de lo que me gusta y el area de desarrollo es ideal para mi, lo haria con empeño</p>
+                </div>
+
+                <div class="card">
+                    <img src="./img/team.png" alt="logo de equipo">
+                    <h3>Trabajo en equipo</h3>
+                    <p>Adquiri habilidades blandas en trabajos regulares de atencion al publico, por ende se trabajar en equipo</p>
+                </div>
+            </div>
         </section>
+
+        <div class="linea"></div>
+        <!-- Formularios -->
+
+        <section class="contacto">
+            <div class="form-container">
+                <form class="formulario">
+                    <h2>Contactame</h2><br>
+
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" placeholder="Ingrese su nombre"><br><br>
+
+                    <label for="apellido">Apellido:</label>
+                    <input type="text" id="apellido" placeholder="Ingrese su apellido"><br><br>
+
+                    <label for="empresa">Empresa:</label>
+                    <input type="text" id="empresa" placeholder="Nombre de la empresa"><br><br>
+
+                    <label for="mail">Mail de contacto</label>
+                    <input type="text" id="mail" placeholder="Ingrese mail"><br><br>
+
+                    <label for="puntuacion">¿Cuanto le gusto mi trabajo del 1 al 10?</label>
+                    <input type="number" min="1" max="10" id="puntuacion"><br>
+
+                    <label for="feedback">Dejame un comentario para mejorar!</label>
+                    <textarea name="feedback" id="feedback" cols="3" rows="5"></textarea><br>
+
+                    <input type="button" value="Enviar" class="submit">
+                </form>
+            </div>
+            
+            <div class="home-container">
+                <h3>Avenida siempreviva 742</h3>
+                <img class="home"src="./img/casa.jpg" alt="Mi casa">
+            </div>
+        </section>
+        <br>
+        <br>
+        <br>
     </main>
 
+        <!-- FOOTER -->
 
+    <footer class="footer">
+        <div class="footer-logo">
+            <img  src="./img/logosm.png">
+        </div>
+        <div class="footer-h4">
+            <h4>¡Espero le que guste y le sirva mi trabajo!</h4>
+        </div>
+        <div>
+            <div class="footer-end">
+                <div class="logos">
+                    <a href="#">
+                         <img class="logo-footer" src="./img/facebook.png">
+                    </a>
+                    <a href="#">
+                            <img class="logo-footer" src="./img/instagram.png">
+                    </a>
+                    <a href="#">
+                            <img class="logo-footer" src="./img/twitter.png">
+                    </a>
+                </div>
+                <div>
+                <h4 class="footer-mail">santimiedema1@gmail.com</h4>
+                </div>
+                <div>
+                <h4 class="footer-number">+542364502105</h4>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
